fixed spacing issues

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -28,6 +28,10 @@ p {
   padding-bottom: 60px;
 }
 
+.image-padding {
+  padding: 20px 0px;
+}
+
 // Navbar
 .navbar {
   margin-bottom: 0px;
@@ -390,7 +394,9 @@ p {
 
 // Salesforce Expansion Page
 
-
+#company-wide-container {
+  margin-bottom: 0px;
+}
 
 // About Us Page
 
